Add git revision field
