# openapi.yaml
@@ -48,7 +48,7 @@ components:
           description: Display name of the tenant
           example: Acme Corp.
         gitRepo:
-          $ref: '#/components/schemas/GitRepo'
+          $ref: '#/components/schemas/RevisionedGitRepo'
     TenantId:
       type: object
       required:
@@ -140,6 +140,10 @@ components:
           type: string
         inventory:
           type: object
+    RevisionedGitRepo:
+      allOf:
+        - $ref: '#/components/schemas/GitRepo'
+        - $ref: '#/components/schemas/Revision'
     GitRepo:
       type: object
       description: Configuration Git repository, usually generated by the API
@@ -164,6 +168,12 @@ components:
           example: |
             gitlab.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIAfuCHKVTjquxvt6CM6tdG4SLp1Btn/nOeHHE5UOzRdf
             gitlab.com ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBFSMqzJeV9rUzU4kWitGjeR4PWSa29SPqJ1fVkhtj3Hw9xjLVXVYrU9QlYWrOLXBpQ6KWjbjTDTdDkoohFzgbEY=
+    Revision:
+      type: object
+      properties:
+        revision:
+          type: string
+          description: Revision to use with a git repository.
   responses:
     Default:
       description: A default response with a reason.
